Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano
Romain Moret
Florian Faber
Michael Voigt

---------------------------
  Jackdmp changes log
---------------------------

2009-01-26 Stephane Letz  <letz@grame.fr>

	* Fix JackNetInterface::SetNetBufferSize for socket buffer size computation and JackNetMasterInterface::DataRecv if synch packet is received, various cleanup.

2009-01-19 Stephane Letz  <letz@grame.fr>

	* Synchronize ALSA backend code with JACK1 one.

2009-01-17 Stephane Letz  <letz@grame.fr>

	* JackMessageBuffer was using thread "Stop" scheme in destructor, now use the safer thread "Kill" way. 

2009-01-14 Stephane Letz  <letz@grame.fr>

	* Cleanup server starting code for clients directly linked with libjackserver.so.

2009-01-07 Stephane Letz  <letz@grame.fr>

	* Use up to BUFFER_SIZE_MAX frames in midi ports, fix for ticket #117.

2009-01-05 Stephane Letz  <letz@grame.fr>

	* Synchronize jack2 public headers with jack1 ones. 
	* Implement jack_client_real_time_priority and jack_client_max_real_time_priority API.

2008-12-18 Stephane Letz  <letz@grame.fr>

	* For ALSA driver, synchronize with latest jack1 memops functions. 

2008-12-17 Stephane Letz  <letz@grame.fr>

	* Use JACK_DRIVER_DIR variable in internal clients loader.

2008-12-16 Stephane Letz  <letz@grame.fr>

	* Client and library global context cleanup in case of incorrect shutdown handling (that is applications not correctly closing client after server has shutdown).

2008-11-27 Stephane Letz  <letz@grame.fr>

	* Report ringbuffer.c fixes from jack1.

2008-11-21 Stephane Letz  <letz@grame.fr>

	* Better isolation of server and clients system resources to allow starting the server in several user account at the same time.

2008-11-19 Stephane Letz  <letz@grame.fr>

	* Libjack shutdown handler does not "deactivate" (fActive = false) the client anymore, so that jack_deactivate correctly does the job later on.